@@ -40,36 +40,36 @@ class DefaultMarkupCacheKeyProviderTest extends WicketTestCase
 		Foo foo = new Foo("foo");
 		assertEquals("org.apache.wicket.markup.Foo.html", provider.getCacheKey(foo, foo.getClass()));
 
-		foo.locale = new Locale("");
+		foo.locale = Locale.of("");
 		assertEquals("org.apache.wicket.markup.Foo_.html",
 			provider.getCacheKey(foo, foo.getClass()));
 
-		foo.locale = new Locale("language");
+		foo.locale = Locale.of("language");
 		assertEquals("org.apache.wicket.markup.Foo_language.html", provider.getCacheKey(foo,
 			foo.getClass()));
 
-		foo.locale = new Locale("", "COUNTRY");
+		foo.locale = Locale.of("", "COUNTRY");
 		assertEquals("org.apache.wicket.markup.Foo__COUNTRY.html", provider.getCacheKey(foo,
 			foo.getClass()));
 
 		// variant only is ignored
-		foo.locale = new Locale("", "", "variant");
+		foo.locale = Locale.of("", "", "variant");
 		assertEquals("org.apache.wicket.markup.Foo_.html",
 			provider.getCacheKey(foo, foo.getClass()));
 
-		foo.locale = new Locale("language", "COUNTRY");
+		foo.locale = Locale.of("language", "COUNTRY");
 		assertEquals("org.apache.wicket.markup.Foo_language_COUNTRY.html", provider.getCacheKey(
 			foo, foo.getClass()));
 
-		foo.locale = new Locale("language", "", "variant");
+		foo.locale = Locale.of("language", "", "variant");
 		assertEquals("org.apache.wicket.markup.Foo_language__variant.html", provider.getCacheKey(
 			foo, foo.getClass()));
 
-		foo.locale = new Locale("", "COUNTRY", "variant");
+		foo.locale = Locale.of("", "COUNTRY", "variant");
 		assertEquals("org.apache.wicket.markup.Foo__COUNTRY_variant.html", provider.getCacheKey(
 			foo, foo.getClass()));
 
-		foo.locale = new Locale("language", "COUNTRY", "variant");
+		foo.locale = Locale.of("language", "COUNTRY", "variant");
 		assertEquals("org.apache.wicket.markup.Foo_language_COUNTRY_variant.html",
 			provider.getCacheKey(foo, foo.getClass()));
 	}
